--- a/pages/project/project.wxss
+++ b/pages/project/project.wxss
@@ -46,9 +46,10 @@
 
 /* 进度分割竖线 */
 .proMiddle {
-  border: 3rpx solid white;
-  height: 40rpx;
-  margin-top: 48rpx;
+  width: 3rpx;
+  /* border: 3rpx solid black; */
+  /* height: 40rpx; */
+  /* margin-top: 48rpx; */
 }
 
 /* 审核列表的样式，主要是为了让上下两个固定框不遮挡列表内容 */
