--- a/pages/tableData/tableData.wxml
+++ b/pages/tableData/tableData.wxml
@@ -1,12 +1,15 @@
 <!--pages/tableData/tableData.wxml-->
-<view id="pname">
-  <view>当前项目名称：{{projectName}}</view>
-  <view>
-    <navigator url="/pages/searchbar/searchbar">
-      <icon color="#0089dd" class="searchicon" type="search"></icon>
-    </navigator>
-  </view>
-</view>
+<controlSearch 
+projectNames="{{projectNames}}"
+bind:inputTyping="inputTyping" 
+bind:selectProject="selectProject" 
+>
+</controlSearch>
+<!-- 模糊横线 -->
+<view style="width:80%;border:1rpx solid gray;opacity:0.1;margin:auto"></view>
+
+<view style="text-align:center;width:100%;color:#0089dd">{{projectName}}</view>
+ 
 
 
 <view class="page" data-weui-theme="{{theme}}">
@@ -93,7 +96,7 @@
 			<view class="weui-grid__label">图片图像</view>
 		</a>
 
-		<a class="weui-grid" bindtap="toDoneLoan">
+		<a class="weui-grid" bindtap="toTxsx">
 			<view class="weui-grid__icon">
 				<image src="/images/txsx.png" alt></image>
 			</view>
