--- a/pages/control/tjtptx/tjtptx.wxml
+++ b/pages/control/tjtptx/tjtptx.wxml
@@ -34,3 +34,31 @@ bind:selectProject="selectProject"
 		</view>
 	</view>
 </view>
+<!-- 
+<view class="page" data-weui-theme="{{theme}}">
+	<view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndFjl">
+				<view class="application-name">
+					<image src="/images/fjl.png" />房建类</view>
+			</label>
+		</view>
+	</view>
+	<view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndGylhl">
+				<view class="application-name">
+					<image src="/images/gylh.png" />公园绿化类</view>
+			</label>
+		</view>
+	</view>
+
+	<view class="weui-form-preview__hd">
+		<view class="weui-form-preview__item">
+			<label class="weui-form-preview__label" bindtap="toDetailsAndSzqll">
+				<view class="application-name">
+					<image src="/images/jgsg.png" />市政桥梁类</view>
+			</label>
+		</view>
+	</view>
+</view> -->
