--- a/pages/control/tjwtjy/tjwtjy.wxml
+++ b/pages/control/tjwtjy/tjwtjy.wxml
@@ -40,8 +40,8 @@ bind:selectProject="selectProject"
 	</view>
 </view>
 
-<button hover-class="submit-hover" bindtap="submitProblemPlan" style="background-color:#0089dd" class="weui-btn weui-btn_primary">提交</button>
-
-
-<!-- 提交记录 -->
-<view hover-class="subHover" bindtap="submitRecord" style="position:absolute;left:50%;top:140%;transform:translate(-50%,0);color:#0089dd">提交记录</view>
+<view style="height:250rpx">
+	<button hover-class="submit-hover" bindtap="submitProblemPlan" style="background-color:#0089dd" class="weui-btn weui-btn_primary">提交</button>
+	<!-- 提交记录 -->
+	<view hover-class="subHover" bindtap="submitRecord" style="margin: 7% 157px;color:#0089dd"><text>提交记录</text></view>
+</view>
