--- a/pages/project/project.wxml
+++ b/pages/project/project.wxml
@@ -1,98 +1,104 @@
-<loading hidden="{{loadingHidden}}">
-	加载中...
-</loading>
-<!-- 筛选区域 -->
-<view class="{{search}}">
-	<view class="weui-flex">
+<!-- 无权限展示页 -->
+<limitPage notShowLimit="{{notShowLimit}}"></limitPage>
 
-		<view class="weui-flex__item">
-			<picker bindchange="bindBuildChange" value="{{buildIndex}}" range="{{buildArray}}">
-				<view class="search-type">
-					<image src="/images/sgdw.png"></image>
-					<text>{{buildArray[buildIndex]}}</text>
-				</view>
-			</picker>
-		</view>
+<view wx:if="{{notShowLimit}}">
+	<myMask notShowMask="{{loadingHidden}}"></myMask>
+	<loading style="z-index: 9900;" hidden="{{loadingHidden}}">
+		加载中...
+	</loading>
 
-		<!-- 画竖线 -->
-		<view class="middle"></view>
+	<!-- 筛选区域 -->
+	<view class="{{search}}">
+		<view class="weui-flex">
 
-		<view class="weui-flex__item">
-			<picker bindchange="bindCategoryChange" value="{{categoryIndex}}" range="{{categoryArray}}">
-				<view class="search-type">
-					<image src="/images/xmlb.png"></image>
-					<text>{{categoryArray[categoryIndex]}}</text>
-				</view>
-			</picker>
-		</view>
-	</view>
-</view>
-
-
-
-<view class="page project-list-info" data-weui-theme="{{theme}}">
-	<view hidden="{{errorInfo}}">
-		错误，请下拉刷新或重新登录
-	</view>
-	
-	<!-- 项目列表页 -->
-	<view class="page__bd">
-		<view class="weui-cells">
-			<view data-text="{{item.projectName}}" data-id="{{item.id}}" data-categoryType="{{item.categoryType}}" bindtap="showProjectInfo" class="weui-cell weui-cell_example " wx:for="{{projectList}}" wx:key="index" style="height: 200rpx;" class="weui-cell weui-cell_active">
-				<view style="position: absolute; top: 20rpx;display:flex;">
-
-					<!-- 图片区域 -->
-					<view catchtap='toTableData' hover-stop-propagation='true' data-text="{{item.projectName}}" data-id="{{item.id}}" data-categoryType="{{item.categoryType}}" class="weui-cell__hd" style="position: relative; margin-right: 10px;">
-						<image src="{{rootPath}}{{item.effectPicture}}" style="width: 200rpx;height: 130rpx;display: block;"></image>
-						<text class="weui-badge" style="position: absolute; top: -0.4em; right: -0.4em;">8</text>
+			<view class="weui-flex__item">
+				<picker bindchange="bindBuildChange" value="{{buildIndex}}" range="{{buildArray}}">
+					<view class="search-type">
+						<image src="/images/sgdw.png"></image>
+						<text>{{buildArray[buildIndex]}}</text>
 					</view>
+				</picker>
+			</view>
 
-					<!-- 项目简易信息区 -->
-					<view class="weui-cell__bd">
-						<view>{{item.projectName}}</view>
-						<view style="display: flex;">
-							<view style="font-size: 13px; color: #888;">{{item.unitName}}</view>
-							<view style="width: 10rpx"></view>
-							<view style="font-size: 13px; color: #888;">{{item.ownerProjectLeader}}</view>
-							<view style="width: 10rpx"></view>
-							<view style="font-size: 13px; color: #888;">{{item.proMainName}}</view>
-							<view style="width: 10rpx"></view>
+			<!-- 画竖线 -->
+			<view class="middle"></view>
+
+			<view class="weui-flex__item">
+				<picker bindchange="bindCategoryChange" value="{{categoryIndex}}" range="{{categoryArray}}">
+					<view class="search-type">
+						<image src="/images/xmlb.png"></image>
+						<text>{{categoryArray[categoryIndex]}}</text>
+					</view>
+				</picker>
+			</view>
+		</view>
+	</view>
+
+	<view class="page project-list-info" data-weui-theme="{{theme}}">
+		<view hidden="{{errorInfo}}">
+			错误，请下拉刷新重试
+		</view>
+		
+		<!-- 项目列表页 -->
+		<view class="page__bd">
+			<view class="weui-cells">
+				<view data-text="{{item.projectName}}" data-id="{{item.id}}" data-categoryType="{{item.categoryType}}" bindtap="showProjectInfo" class="weui-cell weui-cell_example " wx:for="{{projectList}}" wx:key="index" style="height: 200rpx;" class="weui-cell weui-cell_active">
+					<view style="position: absolute; top: 20rpx;display:flex;">
+
+						<!-- 图片区域 -->
+						<view catchtap='toTableData' hover-stop-propagation='true' data-text="{{item.projectName}}" data-id="{{item.id}}" data-categoryType="{{item.categoryType}}" class="weui-cell__hd" style="position: relative; margin-right: 10px;">
+							<image wx:if="{{item.effectPicture.length > 0}}" src="{{rootPath}}{{item.effectPicture}}" style="width: 200rpx;height: 130rpx;display: block;"></image>
+							<view wx:if="{{item.effectPicture.length <= 0}}" style="margin:auto;width: 200rpx;height: 130rpx;">未上传图片</view>
+							<text wx:if="{{item.problemPlanNum > 0}}" class="weui-badge" style="position: absolute; top: -0.4em; right: -0.4em;">{{item.problemPlanNum}}</text>
+						</view>
+
+						<!-- 项目简易信息区 -->
+						<view class="weui-cell__bd">
+							<view>{{item.projectName}}</view>
+							<view style="display: flex;">
+								<view style="font-size: 13px; color: #888;">{{item.unitName}}</view>
+								<view style="width: 10rpx"></view>
+								<view style="font-size: 13px; color: #888;">{{item.ownerProjectLeader}}</view>
+								<view style="width: 10rpx"></view>
+								<view style="font-size: 13px; color: #888;">{{item.proMainName}}</view>
+								<view style="width: 10rpx"></view>
+							</view>
+
+						</view>
+
+						<!-- 项目进度区域 -->
+						<view style="position: absolute; top: 125rpx;width: 700rpx">
+							<scroll-view scroll-x="true" style="height:100rpx;white-space:nowrap;width:100%">
+
+								<block wx:for-item="item1" wx:for-index="index1" wx:for="{{item.infoList}}" wx:key="index1">
+									<view style="display:inline-block">
+										<view style="display:flex">
+											<view class="progress-box" style="width:99.5rpx">
+												<view style="font-size: {{desProgress}}">{{item1.proTermName}}</view>
+												<progress percent="{{item1.proPercent}}" color="{{item1.proColor}}" active duration="{{proDuration}}" stroke-width="{{proWidth}}" />
+											</view>
+											<view class="proMiddle"></view>
+										</view>
+									</view>
+								</block>
+
+							</scroll-view>
 						</view>
 
 					</view>
-
-					<!-- 项目进度区域 -->
-					<view style="position: absolute; top: 125rpx;width: 700rpx">
-						<scroll-view scroll-x="true" style="height:100rpx;white-space:nowrap;width:100%">
-
-							<block wx:for-item="item1" wx:for-index="index1" wx:for="{{item.infoList}}" wx:key="index1">
-								<view style="display:inline-block">
-									<view style="display:flex">
-										<view class="progress-box" style="width:99.5rpx">
-											<view style="font-size: {{desProgress}}">{{item1.proTermName}}</view>
-											<progress percent="{{item1.proPercent}}" color="{{item1.proColor}}" active duration="{{proDuration}}" stroke-width="{{proWidth}}" />
-										</view>
-										<view class="proMiddle"></view>
-									</view>
-								</view>
-							</block>
-
-						</scroll-view>
-					</view>
-
 				</view>
 			</view>
-		</view>
 
-		<!-- 上拉翻页提示 -->
-		<view>
-			<view class='data-loading' hidden='{{dataHidden}}'>
-				数据加载中...
+			<!-- 上拉翻页提示 -->
+			<view>
+				<view class='data-loading' hidden='{{dataHidden}}'>
+					数据加载中...
+				</view>
+				<view class='data-loading' hidden='{{dataHidden_last}}'>
+					没有更多了...
+				</view>
 			</view>
-			<view class='data-loading' hidden='{{dataHidden_last}}'>
-				没有更多了...
-			</view>
-		</view>
 
+		</view>
 	</view>
 </view>
